--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
 
         <!-- Feuille de style personnalisée -->
-    <link rel="stylesheet" href="Assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
 </head>
 <body class="bodySection">
@@ -35,7 +35,7 @@
          =========================== -->
          <nav class="navbar navbar-expand-lg  ">
             <div class="container">
-                <a class="navbar-brand name" href="index.php">Diplex Studio</a>
+                <a class="navbar-brand name" href="index.html">Diplex Studio</a>
             </div>
         </nav>
     
@@ -63,7 +63,7 @@
             <div class="col-md-12">
                 <!-- Affichage de l'image principale depuis la BDD -->
                 <img 
-                    src="./Assets/images/Capture d’écran 2025-03-02 185417.png" 
+                    src="./Capture d’écran 2025-03-02 185417.png" 
                     class="img-fluid rounded imgIm" 
                     alt="Maquilleuse SFX - Portrait"
                 />
@@ -121,7 +121,7 @@
                     <!-- Affichage des 3 dernières images -->
                     <a href="" target="_blank" rel="noopener noreferrer">
                     <img
-                        src="./Assets/images/QuestSystemImage.jpg"
+                        src="./QuestSystemImage.jpg"
                         class="img-fluid rounded"
                         alt="Pluging QuestSystem"
                     />
@@ -131,7 +131,7 @@
                     <!-- Affichage des 3 dernières images -->
                     <a href="" target="_blank" rel="noopener noreferrer">
                     <img
-                        src="./Assets/images/image inventory System.jpg"
+                        src="./image inventory System.jpg"
                         class="img-fluid rounded"
                         alt="Extension Inventory System"
                     />
