--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
 
         <!-- Feuille de style personnalisée -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
 </head>
 <body class="bodySection">
