--- a/index.html
+++ b/index.html
@@ -136,7 +136,17 @@
                         alt="Extension Inventory System"
                     />
                     </a>
-                </div>              
+                </div>   
+                <div class="col-md-4">
+                    <!-- Affichage des 3 dernières images -->
+                    <a href="" target="_blank" rel="noopener noreferrer">
+                    <img
+                        src="./logo diplex ctc.png"
+                        class="img-fluid rounded"
+                        alt="Extension Inventory System"
+                    />
+                    </a>
+                </div>     
                 </div>
         </div>
     </section>
