--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                 </div>   
                 <div class="col-md-4">
                     <!-- Affichage des 3 dernières images -->
-                    <a href="" target="_blank" rel="noopener noreferrer">
+                    <a href="https://mega.nz/file/URRHXJSY#EEQ4VbJKweD_p9f6YKKcLsyUiX16iDHiPGZNfmjSXho" target="_blank" rel="noopener noreferrer">
                     <img
                         src="./logo diplex ctc.png"
                         class="img-fluid rounded"
-                        alt="Extension Inventory System"
+                        alt="Diplex CTC"
                     />
                     </a>
                 </div>     
